--- a/outils-de-greve.html
+++ b/outils-de-greve.html
@@ -1444,26 +1444,26 @@
 	</script>
 	<script> /* <![CDATA[ */var tribe_l10n_datatables = { "aria": { "sort_ascending": ": activer pour trier la colonne ascendante", "sort_descending": ": activer pour trier la colonne descendante" }, "length_menu": "Afficher les saisies _MENU_", "empty_table": "Aucune donn\u00e9e disponible sur le tableau", "info": "Affichant_START_ \u00e0 _END_ du _TOTAL_ des saisies", "info_empty": "Affichant 0 \u00e0 0 de 0 saisies", "info_filtered": "(filtr\u00e9 \u00e0 partir du total des saisies _MAX_ )", "zero_records": "Aucun enregistrement correspondant trouv\u00e9", "search": "Rechercher :", "all_selected_text": "Tous les \u00e9l\u00e9ments de cette page ont \u00e9t\u00e9 s\u00e9lectionn\u00e9s. ", "select_all_link": "S\u00e9lectionner toutes les pages", "clear_selection": "Effacer la s\u00e9lection.", "pagination": { "all": "Tout", "next": "Suivant", "previous": "Pr\u00e9c\u00e9dent" }, "select": { "rows": { "0": "", "_": ": a s\u00e9lectionn\u00e9 %d rang\u00e9es", "1": ": a s\u00e9lectionn\u00e9 une rang\u00e9e" } }, "datepicker": { "dayNames": ["dimanche", "lundi", "mardi", "mercredi", "jeudi", "vendredi", "samedi"], "dayNamesShort": ["dim", "lun", "mar", "mer", "jeu", "ven", "sam"], "dayNamesMin": ["D", "L", "M", "M", "J", "V", "S"], "monthNames": ["janvier", "f\u00e9vrier", "mars", "avril", "mai", "juin", "juillet", "ao\u00fbt", "septembre", "octobre", "novembre", "d\u00e9cembre"], "monthNamesShort": ["janvier", "f\u00e9vrier", "mars", "avril", "mai", "juin", "juillet", "ao\u00fbt", "septembre", "octobre", "novembre", "d\u00e9cembre"], "monthNamesMin": ["Jan", "F\u00e9v", "Mar", "Avr", "Mai", "Juin", "Juil", "Ao\u00fbt", "Sep", "Oct", "Nov", "D\u00e9c"], "nextText": "Suivant", "prevText": "Pr\u00e9c\u00e9dent", "currentText": "Aujourd&#039;hui ", "closeText": "Termin\u00e9", "today": "Aujourd&#039;hui ", "clear": "Effac\u00e9" } }; var tribe_system_info = { "sysinfo_optin_nonce": "b343e0d597", "clipboard_btn_text": "Copier vers le presse-papiers", "clipboard_copied_text": "Infos syst\u00e8me copi\u00e9es", "clipboard_fail_text": "Appuyer sur \"Cmd + C\" pour copier" };/* ]]> */ </script>
 	<script type="text/javascript"
-		src="Comment%20faire%20la%20gr%C3%A8ve%20de%20son%20stage%20_%20-%20Gr%C3%A8ve%20des%20stages_files/ecwd_popup.js"></script>
+		src="index_files/ecwd_popup.js"></script>
 	<script type="text/javascript"
-		src="Comment%20faire%20la%20gr%C3%A8ve%20de%20son%20stage%20_%20-%20Gr%C3%A8ve%20des%20stages_files/core.min.js"></script>
+		src="index_files/core.min.js"></script>
 	<script type="text/javascript"
-		src="Comment%20faire%20la%20gr%C3%A8ve%20de%20son%20stage%20_%20-%20Gr%C3%A8ve%20des%20stages_files/widget.min.js"></script>
+		src="index_files/widget.min.js"></script>
 	<script type="text/javascript"
-		src="Comment%20faire%20la%20gr%C3%A8ve%20de%20son%20stage%20_%20-%20Gr%C3%A8ve%20des%20stages_files/mouse.min.js"></script>
+		src="index_files/mouse.min.js"></script>
 	<script type="text/javascript"
-		src="Comment%20faire%20la%20gr%C3%A8ve%20de%20son%20stage%20_%20-%20Gr%C3%A8ve%20des%20stages_files/draggable.min.js"></script>
+		src="index_files/draggable.min.js"></script>
 	<script type="text/javascript"
-		src="Comment%20faire%20la%20gr%C3%A8ve%20de%20son%20stage%20_%20-%20Gr%C3%A8ve%20des%20stages_files/imagesloaded.min.js"></script>
+		src="index_files/imagesloaded.min.js"></script>
 	<script type="text/javascript"
-		src="Comment%20faire%20la%20gr%C3%A8ve%20de%20son%20stage%20_%20-%20Gr%C3%A8ve%20des%20stages_files/masonry.min.js"></script>
+		src="index_files/masonry.min.js"></script>
 	<script type="text/javascript">
 		/* <![CDATA[ */
 		var ecwd = { "ajaxurl": "http:\/\/www.grevedesstages.info\/wp-admin\/admin-ajax.php", "ajaxnonce": "2b6736b492", "loadingText": "Loading...", "event_popup_title_text": "Event Details", "plugin_url": "http:\/\/www.grevedesstages.info\/wp-content\/plugins\/event-calendar-wd", "gmap_key": "", "gmap_style": "" };
 		/* ]]> */
 	</script>
 	<script type="text/javascript"
-		src="Comment%20faire%20la%20gr%C3%A8ve%20de%20son%20stage%20_%20-%20Gr%C3%A8ve%20des%20stages_files/scripts.js"></script>
+		src="index_files/scripts.js"></script>
 	<script type="text/javascript">
 		/* <![CDATA[ */
 		var DIVI = { "item_count": "%d Item", "items_count": "%d Items" };
@@ -1473,9 +1473,9 @@
 		/* ]]> */
 	</script>
 	<script type="text/javascript"
-		src="Comment%20faire%20la%20gr%C3%A8ve%20de%20son%20stage%20_%20-%20Gr%C3%A8ve%20des%20stages_files/custom.min.js"></script>
+		src="index_files/custom.min.js"></script>
 	<script type="text/javascript"
-		src="Comment%20faire%20la%20gr%C3%A8ve%20de%20son%20stage%20_%20-%20Gr%C3%A8ve%20des%20stages_files/jquery.fancybox.1.3.23.min.js"></script>
+		src="index_files/jquery.fancybox.1.3.23.min.js"></script>
 	<script type="text/javascript">
 		var fb_timeout, fb_opts = { 'overlayShow': true, 'hideOnOverlayClick': false, 'showCloseButton': true, 'margin': 20, 'centerOnScroll': false, 'enableEscapeButton': true, 'autoScale': true };
 		if (typeof easy_fancybox_handler === 'undefined') {
@@ -1497,11 +1497,11 @@
 		jQuery(easy_fancybox_auto);
 	</script>
 	<script type="text/javascript"
-		src="Comment%20faire%20la%20gr%C3%A8ve%20de%20son%20stage%20_%20-%20Gr%C3%A8ve%20des%20stages_files/jquery.easing.1.4.1.min.js"></script>
+		src="index_files/jquery.easing.1.4.1.min.js"></script>
 	<script type="text/javascript"
-		src="Comment%20faire%20la%20gr%C3%A8ve%20de%20son%20stage%20_%20-%20Gr%C3%A8ve%20des%20stages_files/common.js"></script>
+		src="index_files/common.js"></script>
 	<script type="text/javascript"
-		src="Comment%20faire%20la%20gr%C3%A8ve%20de%20son%20stage%20_%20-%20Gr%C3%A8ve%20des%20stages_files/wp-embed.min.js"></script>
+		src="index_files/wp-embed.min.js"></script>
 	<style id="et-core-unified-cached-inline-styles-2">
 		.et_pb_section_0 {
 			max-width: 100%
