Je crois que le site est presque entierement fonctionnel

--- a/questions-et-reponses.html
+++ b/questions-et-reponses.html
@@ -803,7 +803,7 @@
 								<a href="./index">Accueil</a></li>
 							<li id="menu-item-224082"
 								class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-224082">
-								<a href="./ggi-2019</a>
+								<a href="./ggi-2019">GGI 2019</a>
 								<ul class="sub-menu">
 									<li id="menu-item-224263"
 										class="menu-item menu-item-type-post_type menu-item-object-page menu-item-224263">
