Replaced http with https on every links

--- a/ggi-2019.html
+++ b/ggi-2019.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr-CA" prefix="og: http://ogp.me/ns#" class="js">
+<html lang="fr-CA" prefix="og: https://ogp.me/ns#" class="js">
 
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -32,8 +32,8 @@
 		type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","url":"./","sameAs":["https://www.facebook.com/campagnetravailetudiant/","https://www.instagram.com/campagnetravailetudiant/","https://www.youtube.com/channel/UCt7wZf2ODYNAS3bO5KYuJxA","https://twitter.com/cute_travail"],"@id":"./#organization","name":"Gr\u00e8veDesStages.info","logo":"./uploads/2019/01/Gr\u00e8ve-des-stages.jpg"}</script>
 	<!-- / Yoast SEO plugin. -->
 
-	<link rel="dns-prefetch" href="http://fonts.googleapis.com/">
-	<link rel="dns-prefetch" href="http://s.w.org/">
+	<link rel="dns-prefetch" href="https://fonts.googleapis.com/">
+	<link rel="dns-prefetch" href="https://s.w.org/">
 	<link rel="alternate" type="application/rss+xml" title="Grève des stages » Flux"
 		href="./feed/">
 	<link rel="alternate" type="application/rss+xml" title="Grève des stages » Flux des commentaires"
@@ -1161,7 +1161,7 @@
 	<script type="text/javascript" src="GGI%202019%20-%20Gr%C3%A8ve%20des%20stages_files/masonry.min.js"></script>
 	<script type="text/javascript">
 		/* <![CDATA[ */
-		var ecwd = { "ajaxurl": "http:\/\/www.grevedesstages.info\/wp-admin\/admin-ajax.php", "ajaxnonce": "2b6736b492", "loadingText": "Loading...", "event_popup_title_text": "Event Details", "plugin_url": "http:\/\/www.grevedesstages.info\/wp-content\/plugins\/event-calendar-wd", "gmap_key": "", "gmap_style": "" };
+		var ecwd = { "ajaxurl": "https:\/\/www.grevedesstages.info\/wp-admin\/admin-ajax.php", "ajaxnonce": "2b6736b492", "loadingText": "Loading...", "event_popup_title_text": "Event Details", "plugin_url": "https:\/\/www.grevedesstages.info\/wp-content\/plugins\/event-calendar-wd", "gmap_key": "", "gmap_style": "" };
 		/* ]]> */
 	</script>
 	<script type="text/javascript" src="GGI%202019%20-%20Gr%C3%A8ve%20des%20stages_files/scripts.js"></script>
@@ -1169,7 +1169,7 @@
 		/* <![CDATA[ */
 		var DIVI = { "item_count": "%d Item", "items_count": "%d Items" };
 		var et_shortcodes_strings = { "previous": "Previous", "next": "Next" };
-		var et_pb_custom = { "ajaxurl": "http:\/\/www.grevedesstages.info\/wp-admin\/admin-ajax.php", "images_uri": "http:\/\/www.grevedesstages.info\/wp-content\/themes\/Divi\/images", "builder_images_uri": "http:\/\/www.grevedesstages.info\/wp-content\/themes\/Divi\/includes\/builder\/images", "et_frontend_nonce": "df669b703f", "subscription_failed": "Please, check the fields below to make sure you entered the correct information.", "et_ab_log_nonce": "444cd4c2fe", "fill_message": "Please, fill in the following fields:", "contact_error_message": "Please, fix the following errors:", "invalid": "Invalid email", "captcha": "Captcha", "prev": "Prev", "previous": "Previous", "next": "Next", "wrong_captcha": "You entered the wrong number in captcha.", "is_builder_plugin_used": "", "ignore_waypoints": "no", "is_divi_theme_used": "1", "widget_search_selector": ".widget_search", "is_ab_testing_active": "", "page_id": "224034", "unique_test_id": "", "ab_bounce_rate": "5", "is_cache_plugin_active": "no", "is_shortcode_tracking": "" };
+		var et_pb_custom = { "ajaxurl": "https:\/\/www.grevedesstages.info\/wp-admin\/admin-ajax.php", "images_uri": "https:\/\/www.grevedesstages.info\/wp-content\/themes\/Divi\/images", "builder_images_uri": "https:\/\/www.grevedesstages.info\/wp-content\/themes\/Divi\/includes\/builder\/images", "et_frontend_nonce": "df669b703f", "subscription_failed": "Please, check the fields below to make sure you entered the correct information.", "et_ab_log_nonce": "444cd4c2fe", "fill_message": "Please, fill in the following fields:", "contact_error_message": "Please, fix the following errors:", "invalid": "Invalid email", "captcha": "Captcha", "prev": "Prev", "previous": "Previous", "next": "Next", "wrong_captcha": "You entered the wrong number in captcha.", "is_builder_plugin_used": "", "ignore_waypoints": "no", "is_divi_theme_used": "1", "widget_search_selector": ".widget_search", "is_ab_testing_active": "", "page_id": "224034", "unique_test_id": "", "ab_bounce_rate": "5", "is_cache_plugin_active": "no", "is_shortcode_tracking": "" };
 		var et_pb_box_shadow_elements = [];
 		/* ]]> */
 	</script>
